# radxa-4-cluster

./: .gitmodules  0.1-bracket-left.stl  0.1-bracket-right.stl  0.1-case.stl  0.1-top.stl  heatsink-brackets.stl
.github/workflows/: build-fan-manager.yml
fan-manager/: .gitignore  Cargo.toml  Dockerfile  daemonset.yaml  example_daemonset.yaml  readme.md
fan-manager/src/: control.rs  default_curve.rs  main.rs  metrics.rs  metrics_server.rs  param.rs  uf2.rs
fan-manager/uf2/: CMakeLists.txt  README.md
fan-manager/uf2/pwm/: CMakeLists.txt  pwm_fan.c
rack-mount/: center.stl  left_side.stl  lid.stl
