[package]
name = "fan-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.7.1"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
sysinfo = "0.34.2"
tokio = { version = "1", features = ["full"] }
prometheus-client = "0.23.1"
prometheus-client-derive-encode = "0.4.2"
axum = "0.8.4"